feat: add 'runmcp' command for pipx compatibility fix!: move server.py into the analytics_mcp package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ dependencies = [
     "httpx>=0.28.1"
 ]
 
+[project.scripts]
+runmcp = "analytics_mcp.server:run_server"
+
 [project.optional-dependencies]
 dev = [
     "black",
